color contrast and css link corrected

--- a/styles/base.css
+++ b/styles/base.css
@@ -7,12 +7,14 @@
     --secondary-color: #ada197;
     /* warm sand */
     --body-blue-color: #006699;
-    --button-color: #0491c9;
+    --button-color: #0277bd;
     /* dark slate blue */
     --accent2-color: #e9c46a;
     /* light golden yellow */
-    --light-color: #f9fcf9;
-    --Light-gray: #f0f8ff;
+    --light-color: #ffffff;
+    /*golden brown */
+    --Light-gray: #8c6d1f;
+
 
     --heading-font: "Times New Roman", "Georgia", serif;
 }
